--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,5 +1,6 @@
-html, body{
+html{
   height: 100%;
+  font-size: 10px;
 }
 nav {
   display: inline-block;
@@ -96,6 +97,9 @@ nav {
 }
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px) {
+  html {
+    font-size: 16px;
+  }
   #wrap {
     width: 80%;
   }
